add links for all pages

--- a/components/chek-list.htm
+++ b/components/chek-list.htm
@@ -32,10 +32,10 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="/components/home-page.html"
+                        <a href="../components/home-page.html"
                             ><img
                                 class="header__logo"
-                                src="/pictures/png/logologo.png"
+                                src="../pictures/png/logologo.png"
                                 alt="logo"
                         /></a>
                     </div>
@@ -44,7 +44,7 @@
                         <button class="header__search_button" type="button">
                             <img
                                 class="header__search--s"
-                                src="/pictures/svg/search.svg"
+                                src="../pictures/svg/search.svg"
                                 alt="search"
                             />
                         </button>
@@ -54,7 +54,7 @@
                             <a href="mailto:brand.panstakan@gmail.com"
                                 ><img
                                     class="header__mail--svg"
-                                    src="/pictures/svg/mail.svg"
+                                    src="../pictures/svg/mail.svg"
                                     alt="mail"
                             /></a>
                             <a
@@ -72,15 +72,15 @@
                             <a href=""
                                 ><img
                                     class="header__favorite--svg"
-                                    src="/pictures/svg/favorite.svg"
+                                    src="../pictures/svg/favorite.svg"
                                     alt="favorites"
                             /></a>
                         </div>
                         <div class="header__basket header__contact">
-                            <a href="./basket.html">
+                            <a href="../components/basket.html">
                                 <img
                                     class="header__basket--svg"
-                                    src="/pictures/svg/basket.svg"
+                                    src="../pictures/svg/basket.svg"
                                     alt="basket"
                                 />
                                 <span class="basket-counter">+</span>
@@ -93,7 +93,7 @@
                         <!-- Бургер-иконка -->
 
                         <img
-                            src="/pictures/svg/burger.svg"
+                            src="../pictures/svg/burger.svg"
                             alt=""
                             id="burger-icon"
                         />
@@ -104,12 +104,12 @@
                                 <li>
                                     <a
                                         class="header__link--title"
-                                        href="./catalog.html"
+                                        href="../components/catalog.html"
                                         >Каталог</a
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/category.html"
                                         >Акції</a
                                     >
                                 </li>
@@ -119,12 +119,12 @@
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/price.html"
                                         >Прайс</a
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/contacts.html"
                                         >Контакти</a
                                     >
                                 </li>
@@ -137,12 +137,12 @@
                             <li>
                                 <a
                                     class="header__link--title"
-                                    href="./catalog.html"
+                                    href="../components/catalog.html"
                                     >Каталог</a
                                 >
                             </li>
                             <li>
-                                <a class="header__link--title" href="">Акції</a>
+                                <a class="header__link--title" href="../components/category.html">Акції</a>
                             </li>
                             <li>
                                 <a class="header__link--title" href=""
@@ -150,10 +150,10 @@
                                 >
                             </li>
                             <li>
-                                <a class="header__link--title" href="">Прайс</a>
+                                <a class="header__link--title" href="../components/price.html">Прайс</a>
                             </li>
                             <li>
-                                <a class="header__link--title" href=""
+                                <a class="header__link--title" href="../components/contacts.html"
                                     >Контакти</a
                                 >
                             </li>
@@ -214,7 +214,7 @@
                     <a class="nav-logo" href=""
                         ><img
                             class="nav-logo"
-                            src="/pictures/svg/user-log.svg"
+                            src="../pictures/svg/user-log.svg"
                             alt=""
                     /></a>
                 </div>
@@ -223,10 +223,10 @@
         <main>
             <ul class="menu menu-chek">
                 <li class="menu-item">
-                    <a href="/components/home-page.html">Головна</a>
+                    <a href="../components/home-page.html">Головна</a>
                 </li>
                 <li class="menu-item">
-                    <a href="/components/catalog.html">Оформлення замовлення</a>
+                    <a href="../components/catalog.html">Оформлення замовлення</a>
                 </li>
             </ul>
             <div class="container check">
@@ -245,7 +245,7 @@
                                 value="agree"
                             />
                             <span class="check__tottal-span"></span>
-                            Я згоден з умовами <a href="">договору оферти</a>
+                            Я згоден з умовами <a href="../components/contract.html">договору оферти</a>
                         </label>
                         <label class="check__tottal-label">
                             <input
@@ -467,7 +467,7 @@
                     <div class="footer__grid">
                         <div class="footer__logo">
                             <img
-                                src="/pictures/png/logo-footer.png"
+                                src="../pictures/png/logo-footer.png"
                                 alt="logo-second"
                                 class="footer__logo--img"
                             />
@@ -493,7 +493,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/instagram.png"
+                                            src="../pictures/png/instagram.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -501,7 +501,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/facebook.png"
+                                            src="../pictures/png/facebook.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -509,7 +509,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/twitter.png"
+                                            src="../pictures/png/twitter.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -517,7 +517,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/whatsapp.png"
+                                            src="../pictures/png/whatsapp.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -537,14 +537,14 @@
                         <div class="credit-cart__item">
                             <img
                                 class="credit-cart__png"
-                                src="/pictures/png/visa.png"
+                                src="../pictures/png/visa.png"
                                 alt="visa"
                             />
                         </div>
                         <div class="credit-cart__item">
                             <img
                                 class="credit-cart__png"
-                                src="/pictures/png/mastercatt.png"
+                                src="../pictures/png/mastercatt.png"
                                 alt="mastercart"
                             />
                         </div>
@@ -561,19 +561,19 @@
                     <div class="footer__down_grid4">
                         <ul>
                             <li>
-                                <a class="footer__timeflow" href="" type="tel"
+                                <a class="footer__timeflow" href="tel:+380684772016" type="tel"
                                     >+38 (068) 477-20-16</a
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="" type="tel"
+                                <a class="footer__timeflow" href="tel:+380636313100" type="tel"
                                     >+38 (063) 631-31-00</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="mailto:horekavip@gmai.com"
                                     type="mailto"
                                     >horekavip@gmai.com</a
                                 >
@@ -581,7 +581,7 @@
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="brand.panstakan@gmai.com"
                                     type="mailto"
                                     >brand.panstakan@gmai.com</a
                                 >
@@ -589,7 +589,7 @@
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="mailto:opt.panstakan@gmail.com"
                                     type="mailto"
                                     >opt.panstakan@gmail.com</a
                                 >
@@ -600,10 +600,10 @@
                     <div class="footer__down_grid5">
                         <ul>
                             <li>
-                                <a class="footer__timeflow" href="">Доставка</a>
+                                <a class="footer__timeflow" href="../components/chek-list.htm">Доставка</a>
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="">Оплата</a>
+                                <a class="footer__timeflow" href="../components/price.html">Оплата</a>
                             </li>
                             <li>
                                 <a class="footer__timeflow" href="">Блог</a>
@@ -614,18 +614,18 @@
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href=""
+                                <a class="footer__timeflow" href="../components/contract.html"
                                     >Договір публічної оферти</a
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="">Контакти</a>
+                                <a class="footer__timeflow" href="../components/contacts.html">Контакти</a>
                             </li>
                             <li>
                                 <a class="footer__timeflow" href="">Відгуки</a>
                             </li>
                             <li>
-                                <a class="footer__timeflow" href=""
+                                <a class="footer__timeflow" href="../components/contacts.html"
                                     >Карта проїзду</a
                                 >
                             </li>
