--- a/components/cart-item.html
+++ b/components/cart-item.html
@@ -27,10 +27,10 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="/components/home-page.html"
+                        <a href="../components/home-page.html"
                             ><img
                                 class="header__logo"
-                                src="/pictures/png/logologo.png"
+                                src="../pictures/png/logologo.png"
                                 alt="logo"
                         /></a>
                     </div>
@@ -39,7 +39,7 @@
                         <button class="header__search_button" type="button">
                             <img
                                 class="header__search--s"
-                                src="/pictures/svg/search.svg"
+                                src="../pictures/svg/search.svg"
                                 alt="search"
                             />
                         </button>
@@ -49,7 +49,7 @@
                             <a href="mailto:brand.panstakan@gmail.com"
                                 ><img
                                     class="header__mail--svg"
-                                    src="/pictures/svg/mail.svg"
+                                    src="../pictures/svg/mail.svg"
                                     alt="mail"
                             /></a>
                             <a
@@ -67,15 +67,15 @@
                             <a href=""
                                 ><img
                                     class="header__favorite--svg"
-                                    src="/pictures/svg/favorite.svg"
+                                    src="../pictures/svg/favorite.svg"
                                     alt="favorites"
                             /></a>
                         </div>
                         <div class="header__basket header__contact">
-                            <a href="./basket.html">
+                            <a href="../components/basket.html">
                                 <img
                                     class="header__basket--svg"
-                                    src="/pictures/svg/basket.svg"
+                                    src="../pictures/svg/basket.svg"
                                     alt="basket"
                                 />
                                 <span class="basket-counter">+</span>
@@ -88,7 +88,7 @@
                         <!-- Бургер-иконка -->
 
                         <img
-                            src="/pictures/svg/burger.svg"
+                            src="../pictures/svg/burger.svg"
                             alt=""
                             id="burger-icon"
                         />
@@ -99,12 +99,12 @@
                                 <li>
                                     <a
                                         class="header__link--title"
-                                        href="./catalog.html"
+                                        href="../components/catalog.html"
                                         >Каталог</a
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/category.html"
                                         >Акції</a
                                     >
                                 </li>
@@ -114,12 +114,12 @@
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/price.html"
                                         >Прайс</a
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/contacts.html"
                                         >Контакти</a
                                     >
                                 </li>
@@ -132,12 +132,12 @@
                             <li>
                                 <a
                                     class="header__link--title"
-                                    href="./catalog.html"
+                                    href="../components/catalog.html"
                                     >Каталог</a
                                 >
                             </li>
                             <li>
-                                <a class="header__link--title" href="">Акції</a>
+                                <a class="header__link--title" href="../components/category.html">Акції</a>
                             </li>
                             <li>
                                 <a class="header__link--title" href=""
@@ -145,10 +145,10 @@
                                 >
                             </li>
                             <li>
-                                <a class="header__link--title" href="">Прайс</a>
+                                <a class="header__link--title" href="../components/price.html">Прайс</a>
                             </li>
                             <li>
-                                <a class="header__link--title" href=""
+                                <a class="header__link--title" href="../components/contacts.html"
                                     >Контакти</a
                                 >
                             </li>
@@ -209,7 +209,7 @@
                     <a class="nav-logo" href=""
                         ><img
                             class="nav-logo"
-                            src="/pictures/svg/user-log.svg"
+                            src="../pictures/svg/user-log.svg"
                             alt=""
                     /></a>
                 </div>
@@ -325,13 +325,13 @@
             </div>
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="/components/home-page.html">Головна</a>
+                    <a href="../components/home-page.html">Головна</a>
                 </li>
                 <li class="menu-item">
-                    <a href="/components/catalog.html">Каталог</a>
+                    <a href="../components/catalog.html">Каталог</a>
                 </li>
                 <li class="menu-item">
-                    <a href="">Сиропи для кави та коктейлів</a>
+                    <a href="../components/cart-item.html">Сиропи для кави та коктейлів</a>
                 </li>
                 <li class="menu-item">
                     <a href=""
@@ -530,11 +530,11 @@
                         <h4 class="sale__item__h4">
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
-                        <img
+                        <a href="../components/cart-item.html"><img
                             src="/pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
-                        />
+                        /></a>
 
                         <div class="sale__content">
                             <div class="sale__item__text">
@@ -560,11 +560,11 @@
                         <h4 class="sale__item__h4">
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
-                        <img
+                        <a href="../components/cart-item.html"><img
                             src="/pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
-                        />
+                        /></a>
 
                         <div class="sale__content">
                             <div class="sale__item__text">
@@ -590,11 +590,11 @@
                         <h4 class="sale__item__h4">
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
-                        <img
+                        <a href="../components/cart-item.html"><img
                             src="/pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
-                        />
+                        /></a>
 
                         <div class="sale__content">
                             <div class="sale__item__text">
@@ -625,7 +625,7 @@
                     <div class="footer__grid">
                         <div class="footer__logo">
                             <img
-                                src="/pictures/png/logo-footer.png"
+                                src="../pictures/png/logo-footer.png"
                                 alt="logo-second"
                                 class="footer__logo--img"
                             />
@@ -651,7 +651,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/instagram.png"
+                                            src="../pictures/png/instagram.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -659,7 +659,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/facebook.png"
+                                            src="../pictures/png/facebook.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -667,7 +667,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/twitter.png"
+                                            src="../pictures/png/twitter.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -675,7 +675,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/whatsapp.png"
+                                            src="../pictures/png/whatsapp.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -695,14 +695,14 @@
                         <div class="credit-cart__item">
                             <img
                                 class="credit-cart__png"
-                                src="/pictures/png/visa.png"
+                                src="../pictures/png/visa.png"
                                 alt="visa"
                             />
                         </div>
                         <div class="credit-cart__item">
                             <img
                                 class="credit-cart__png"
-                                src="/pictures/png/mastercatt.png"
+                                src="../pictures/png/mastercatt.png"
                                 alt="mastercart"
                             />
                         </div>
@@ -719,19 +719,19 @@
                     <div class="footer__down_grid4">
                         <ul>
                             <li>
-                                <a class="footer__timeflow" href="" type="tel"
+                                <a class="footer__timeflow" href="tel:+380684772016" type="tel"
                                     >+38 (068) 477-20-16</a
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="" type="tel"
+                                <a class="footer__timeflow" href="tel:+380636313100" type="tel"
                                     >+38 (063) 631-31-00</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="mailto:horekavip@gmai.com"
                                     type="mailto"
                                     >horekavip@gmai.com</a
                                 >
@@ -739,7 +739,7 @@
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="brand.panstakan@gmai.com"
                                     type="mailto"
                                     >brand.panstakan@gmai.com</a
                                 >
@@ -747,7 +747,7 @@
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="mailto:opt.panstakan@gmail.com"
                                     type="mailto"
                                     >opt.panstakan@gmail.com</a
                                 >
@@ -758,10 +758,10 @@
                     <div class="footer__down_grid5">
                         <ul>
                             <li>
-                                <a class="footer__timeflow" href="">Доставка</a>
+                                <a class="footer__timeflow" href="../components/chek-list.htm">Доставка</a>
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="">Оплата</a>
+                                <a class="footer__timeflow" href="../components/price.html">Оплата</a>
                             </li>
                             <li>
                                 <a class="footer__timeflow" href="">Блог</a>
@@ -772,18 +772,18 @@
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href=""
+                                <a class="footer__timeflow" href="../components/contract.html"
                                     >Договір публічної оферти</a
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="">Контакти</a>
+                                <a class="footer__timeflow" href="../components/contacts.html">Контакти</a>
                             </li>
                             <li>
                                 <a class="footer__timeflow" href="">Відгуки</a>
                             </li>
                             <li>
-                                <a class="footer__timeflow" href=""
+                                <a class="footer__timeflow" href="../components/contacts.html"
                                     >Карта проїзду</a
                                 >
                             </li>
