--- a/components/contacts.html
+++ b/components/contacts.html
@@ -29,10 +29,10 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href=""
+                        <a href="../components/home-page.html"
                             ><img
                                 class="header__logo"
-                                src="/pictures/png/logologo.png"
+                                src="../pictures/png/logologo.png"
                                 alt="logo"
                         /></a>
                     </div>
@@ -41,7 +41,7 @@
                         <button class="header__search_button" type="button">
                             <img
                                 class="header__search--s"
-                                src="/pictures/svg/search.svg"
+                                src="../pictures/svg/search.svg"
                                 alt="search"
                             />
                         </button>
@@ -51,7 +51,7 @@
                             <a href="mailto:brand.panstakan@gmail.com"
                                 ><img
                                     class="header__mail--svg"
-                                    src="/pictures/svg/mail.svg"
+                                    src="../pictures/svg/mail.svg"
                                     alt="mail"
                             /></a>
                             <a
@@ -69,15 +69,15 @@
                             <a href=""
                                 ><img
                                     class="header__favorite--svg"
-                                    src="/pictures/svg/favorite.svg"
+                                    src="../pictures/svg/favorite.svg"
                                     alt="favorites"
                             /></a>
                         </div>
                         <div class="header__basket header__contact">
-                            <a href="./basket.html">
+                            <a href="../components/basket.html">
                                 <img
                                     class="header__basket--svg"
-                                    src="/pictures/svg/basket.svg"
+                                    src="../pictures/svg/basket.svg"
                                     alt="basket"
                                 />
                                 <span class="basket-counter">+</span>
@@ -90,7 +90,7 @@
                         <!-- Бургер-иконка -->
 
                         <img
-                            src="/pictures/svg/burger.svg"
+                            src="../pictures/svg/burger.svg"
                             alt=""
                             id="burger-icon"
                         />
@@ -101,12 +101,12 @@
                                 <li>
                                     <a
                                         class="header__link--title"
-                                        href="./catalog.html"
+                                        href="../components/catalog.html"
                                         >Каталог</a
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/category.html"
                                         >Акції</a
                                     >
                                 </li>
@@ -116,12 +116,12 @@
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/price.html"
                                         >Прайс</a
                                     >
                                 </li>
                                 <li>
-                                    <a class="header__link--title" href=""
+                                    <a class="header__link--title" href="../components/contacts.html"
                                         >Контакти</a
                                     >
                                 </li>
@@ -134,12 +134,12 @@
                             <li>
                                 <a
                                     class="header__link--title"
-                                    href="./catalog.html"
+                                    href="../components/catalog.html"
                                     >Каталог</a
                                 >
                             </li>
                             <li>
-                                <a class="header__link--title" href="">Акції</a>
+                                <a class="header__link--title" href="../components/category.html">Акції</a>
                             </li>
                             <li>
                                 <a class="header__link--title" href=""
@@ -147,10 +147,10 @@
                                 >
                             </li>
                             <li>
-                                <a class="header__link--title" href="">Прайс</a>
+                                <a class="header__link--title" href="../components/price.html">Прайс</a>
                             </li>
                             <li>
-                                <a class="header__link--title" href=""
+                                <a class="header__link--title" href="../components/contacts.html"
                                     >Контакти</a
                                 >
                             </li>
@@ -211,7 +211,7 @@
                     <a class="nav-logo" href=""
                         ><img
                             class="nav-logo"
-                            src="/pictures/svg/user-log.svg"
+                            src="../pictures/svg/user-log.svg"
                             alt=""
                     /></a>
                 </div>
@@ -223,10 +223,10 @@
                     <div>
                         <ul class="menu">
                             <li class="menu-item">
-                                <a href="/components/home-page.html">Головна</a>
+                                <a href="../components/home-page.html">Головна</a>
                             </li>
                             <li class="menu-item">
-                                <a href="/components/contacts.html">Контакти</a>
+                                <a href="../components/contacts.html">Контакти</a>
                             </li>
                         </ul>
                     </div>
@@ -439,7 +439,7 @@
                     <div class="footer__grid">
                         <div class="footer__logo">
                             <img
-                                src="/pictures/png/logo-footer.png"
+                                src="../pictures/png/logo-footer.png"
                                 alt="logo-second"
                                 class="footer__logo--img"
                             />
@@ -465,7 +465,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/instagram.png"
+                                            src="../pictures/png/instagram.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -473,7 +473,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/facebook.png"
+                                            src="../pictures/png/facebook.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -481,7 +481,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/twitter.png"
+                                            src="../pictures/png/twitter.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -489,7 +489,7 @@
                                 <li>
                                     <a href=""
                                         ><img
-                                            src="/pictures/png/whatsapp.png"
+                                            src="../pictures/png/whatsapp.png"
                                             alt=""
                                             class="footer__social--svg"
                                     /></a>
@@ -509,14 +509,14 @@
                         <div class="credit-cart__item">
                             <img
                                 class="credit-cart__png"
-                                src="/pictures/png/visa.png"
+                                src="../pictures/png/visa.png"
                                 alt="visa"
                             />
                         </div>
                         <div class="credit-cart__item">
                             <img
                                 class="credit-cart__png"
-                                src="/pictures/png/mastercatt.png"
+                                src="../pictures/png/mastercatt.png"
                                 alt="mastercart"
                             />
                         </div>
@@ -533,19 +533,19 @@
                     <div class="footer__down_grid4">
                         <ul>
                             <li>
-                                <a class="footer__timeflow" href="" type="tel"
+                                <a class="footer__timeflow" href="tel:+380684772016" type="tel"
                                     >+38 (068) 477-20-16</a
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="" type="tel"
+                                <a class="footer__timeflow" href="tel:+380636313100" type="tel"
                                     >+38 (063) 631-31-00</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="mailto:horekavip@gmai.com"
                                     type="mailto"
                                     >horekavip@gmai.com</a
                                 >
@@ -553,7 +553,7 @@
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="brand.panstakan@gmai.com"
                                     type="mailto"
                                     >brand.panstakan@gmai.com</a
                                 >
@@ -561,7 +561,7 @@
                             <li>
                                 <a
                                     class="footer__timeflow"
-                                    href=""
+                                    href="mailto:opt.panstakan@gmail.com"
                                     type="mailto"
                                     >opt.panstakan@gmail.com</a
                                 >
@@ -572,10 +572,10 @@
                     <div class="footer__down_grid5">
                         <ul>
                             <li>
-                                <a class="footer__timeflow" href="">Доставка</a>
+                                <a class="footer__timeflow" href="../components/chek-list.htm">Доставка</a>
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="">Оплата</a>
+                                <a class="footer__timeflow" href="../components/price.html">Оплата</a>
                             </li>
                             <li>
                                 <a class="footer__timeflow" href="">Блог</a>
@@ -586,18 +586,18 @@
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href=""
+                                <a class="footer__timeflow" href="../components/contract.html"
                                     >Договір публічної оферти</a
                                 >
                             </li>
                             <li>
-                                <a class="footer__timeflow" href="">Контакти</a>
+                                <a class="footer__timeflow" href="../components/contacts.html">Контакти</a>
                             </li>
                             <li>
                                 <a class="footer__timeflow" href="">Відгуки</a>
                             </li>
                             <li>
-                                <a class="footer__timeflow" href=""
+                                <a class="footer__timeflow" href="../components/contacts.html"
                                     >Карта проїзду</a
                                 >
                             </li>
@@ -611,7 +611,7 @@
 
         <script src="/js/basket.js"></script>
         <script src="/js/burger.js"></script>
-        <script src="/js/counters.js"></script>
+        <!-- <script src="/js/counters.js"></script> -->
 
         <script src="/js/basket-delete.js"></script>
     </body>
