change for github pages

--- a/components/basket.html
+++ b/components/basket.html
@@ -31,7 +31,7 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="../components/home-page.html"
+                        <a href="../index.html"
                             ><img
                                 class="header__logo"
                                 src="../pictures/png/logologo.png"
