--- a/components/cart-item.html
+++ b/components/cart-item.html
@@ -27,7 +27,7 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="../components/home-page.html"
+                        <a href="../index.html"
                             ><img
                                 class="header__logo"
                                 src="../pictures/png/logologo.png"
@@ -325,7 +325,7 @@
             </div>
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="../components/home-page.html">Головна</a>
+                    <a href="../index.html">Головна</a>
                 </li>
                 <li class="menu-item">
                     <a href="../components/catalog.html">Каталог</a>
