--- a/components/catalog.html
+++ b/components/catalog.html
@@ -21,7 +21,7 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="../components/home-page.html"
+                        <a href="../index.html"
                             ><img
                                 class="header__logo"
                                 src="../pictures/png/logologo.png"
@@ -318,7 +318,7 @@
             </div>
 
             <div class="second-nav">
-                <a class="second-nav__link" href="../components/home-page.html"
+                <a class="second-nav__link" href="../index.html"
                     >Головна</a
                 >
                 <img
