--- a/components/category.html
+++ b/components/category.html
@@ -24,7 +24,7 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="../components/home-page.html"
+                        <a href="../index.html"
                             ><img
                                 class="header__logo"
                                 src="../pictures/png/logologo.png"
@@ -324,7 +324,7 @@
                 <div class="second-nav">
                     <a
                         class="second-nav__link"
-                        href="../components/home-page.html"
+                        href="../index.html"
                         >Головна</a
                     >
                     <img
