--- a/components/chek-list.htm
+++ b/components/chek-list.htm
@@ -32,7 +32,7 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="../components/home-page.html"
+                        <a href="../index.html"
                             ><img
                                 class="header__logo"
                                 src="../pictures/png/logologo.png"
@@ -223,7 +223,7 @@
         <main>
             <ul class="menu menu-chek">
                 <li class="menu-item">
-                    <a href="../components/home-page.html">Головна</a>
+                    <a href="../index.html">Головна</a>
                 </li>
                 <li class="menu-item">
                     <a href="../components/catalog.html">Оформлення замовлення</a>
