--- a/components/contract.html
+++ b/components/contract.html
@@ -29,7 +29,7 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="../components/home-page.html"
+                        <a href="../index.html"
                             ><img
                                 class="header__logo"
                                 src="../pictures/png/logologo.png"
@@ -222,7 +222,7 @@
                 <div>
                     <ul class="menu">
                         <li class="menu-item">
-                            <a href="../components/home-page.html">Головна</a>
+                            <a href="../index.html">Головна</a>
                         </li>
                         <li class="menu-item">
                             <a href="../components/contacts.html">Контакти</a>
