--- a/components/item-not.html
+++ b/components/item-not.html
@@ -31,7 +31,7 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="../components/home-page.html"
+                        <a href="../index.html"
                             ><img
                                 class="header__logo"
                                 src="../pictures/png/logologo.png"
@@ -335,7 +335,7 @@
                 <div></div>
             </div>
             <ul class="menu">
-                <li class="menu-item"><a href="../components/home-page.html">Головна</a></li>
+                <li class="menu-item"><a href="../index.html">Головна</a></li>
                 <li class="menu-item"><a href="../components/catalog.html">Каталог</a></li>
                 <li class="menu-item">
                     <a href="../components/catalog.html">Сиропи для кави та коктейлів</a>
