--- a/components/price.html
+++ b/components/price.html
@@ -27,7 +27,7 @@
             <div class="header">
                 <div class="header__top">
                     <div>
-                        <a href="../components/home-page.html"
+                        <a href="../index.html"
                             ><img
                                 class="header__logo"
                                 src="../pictures/png/logologo.png"
@@ -220,7 +220,7 @@
                 <div class="price-list">
                     <ul class="menu menu-chek">
                         <li class="menu-item">
-                            <a href="../components/home-page.html">Головна</a>
+                            <a href="../index.html">Головна</a>
                         </li>
                         <li class="menu-item">
                             <a href="">прайс</a>
